--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ lint = ["flake8"]
 test = ["pytest", "mypy"]
 
 [tool.setuptools]
-packages = ["packagename"]
+packages = ["unsteady2Dmorph"]
 
 [tool.flake8]
 max-line-length = 99
