Vectorized computation of unsteady potential
Part of the effort to optimize the computational cost of the methodology (currently, each dynamic polar takes approximately 70 sec to compute for 2.5 cycles with 1 cycle startup)

--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,6 @@ dmypy.json
 # Github environment folder
 .github/
 2D_airfoil.py
+flapping_amplitude.py
 examples/2D_airfoil_static.ipynb
+examples_local/*.py
